# GestureEmail

./: .exrc  .gitignore  CMakeCache.txt  CMakeLists.txt  GestureEmail  GestureEmail_automoc.cpp  README  cmake_install.cmake  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  quotedprintable.cpp  recGestureWidget.cpp  recGestureWidget.h
Imap/: imap.cpp  imap.h  imapmessage.cpp  main.cpp
OneDollar/: GeometricRecognizer.cpp  GeometricRecognizer.h  GeometricRecognizerTypes.h  SampleGestures.h
